# clangTestCase

./: .clang-tidy  CMakeLists.txt  testMain.cpp
